--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,6 @@
+img {
+  max-width: 100%;
+}
 .line {
   border-color: #ddd;
   border-radius: 4px 4px 0 0;
@@ -86,7 +89,9 @@ input.apple-switch:checked:after {
   left: 20px;
   box-shadow: -2px 4px 3px rgba(0, 0, 0, 0.05);
 }
-
+.main label {
+  cursor: pointer;
+}
 input[type="checkbox"]:focus {
   outline: none !important;
   outline-offset: 0 !important;
@@ -131,7 +136,7 @@ header {
 .main {
   margin: 2rem auto 0 !important;
   background-color: white;
-  padding: 0 2rem;
+  padding: 0 4rem;
 
   border-radius: 1rem;
   box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
@@ -194,6 +199,109 @@ header {
   flex-direction: column;
   flex-shrink: 0;
   flex-grow: 1;
+}
+.article {
+  margin: 2rem 1rem 0;
+  background-color: white !important;
+  padding: 1rem;
+  border-radius: 1rem;
+  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+}
+.article p {
+  color: #1f2937;
+  line-height: 2rem !important;
+  font-size: 1.5rem !important;
+  margin: 1.2rem 0;
+}
+
+.article a:not(.not-a) {
+  color: rgb(31 41 55);
+  text-decoration: underline;
+  transition: all;
+}
+.article a:hover {
+  color: rgb(31 41 55/0.8);
+}
+
+.article img:not(.not-img) {
+  border-radius: 0.5rem;
+  text-align: center;
+}
+
+.article figcaption {
+  text-align: center !important;
+  color: rgb(31 41 55 / 0.8);
+  margin-top: 0.5rem;
+}
+
+.article figcaption a {
+  text-decoration: underline;
+}
+
+.article h2:not(.not-h2) {
+  color: rgb(31 41 55 / 0.9);
+  font-size: 1.75rem;
+  font-weight: 600;
+}
+
+.article h3 {
+  color: rgb(31 41 55 / 0.9);
+  font-size: 1.6rem;
+  font-weight: 600;
+}
+
+.article h4 {
+  color: rgb(31 41 55 / 0.9);
+  font-size: 1.45rem;
+  font-weight: 600;
+}
+.article ul {
+  list-style: disc;
+  padding-left: 1.2rem;
+  margin: 1rem 0;
+}
+
+.article ol {
+  list-style: decimal;
+  padding-left: 1.2rem;
+  margin: 1rem 0;
+}
+
+.article blockquote p {
+  background-color: rgb(239 246 255);
+  color: rgb(37 99 235);
+  border: 1px solid rgb(37 99 235);
+  font-weight: 500;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  line-height: 1.75rem;
+}
+
+.article table {
+  border: 1px solid #e2e8f0;
+  margin-bottom: 1.5rem;
+  border-radius: 12px;
+  min-width: 100%;
+}
+
+.article table th {
+  background-color: #f3f4f6;
+  font-weight: 600;
+  padding: 15px 0;
+  text-align: left;
+  padding: 10px 0.5rem;
+  border-left: 1px solid #e2e8f0;
+}
+
+.article table tr {
+  border-bottom: 1px solid #e2e8f0;
+}
+
+.article table td {
+  /* white-space: nowrap; */
+  padding: 10px 0.5rem;
+  border-left: 1px solid #e2e8f0;
 }
 
 /* Other Style */
